latests improvements + theme

--- a/css/starter.css
+++ b/css/starter.css
@@ -6,8 +6,18 @@ body {
     text-align: center;
 }
 
+
+
 .card {
     margin: 0 auto; /* Added */
     float: none; /* Added */
     margin-bottom: 10px; /* Added */
+}
+
+.card-text {
+    text-align: left;
+}
+
+.sender {
+    color: #563D7C;
 }
