--- a/css/starter.css
+++ b/css/starter.css
@@ -1,5 +1,7 @@
 body {
     padding-top: 50px;
+    background-image: url("../assets/creampaper_@2X.png");
+    background-repeat: repeat;
 }
 .starter-template {
     text-align: center;
