--- a/css/starter.css
+++ b/css/starter.css
@@ -1,4 +1,10 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body {
+    margin-bottom: 60px; /* Margin bottom by footer height */
     padding-top: 50px;
     background-image: url("../assets/creampaper_@2X.png");
     background-repeat: repeat;
@@ -21,4 +27,13 @@ body {
 
 .sender {
     color: #563D7C;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
 }
