--- a/css/starter.css
+++ b/css/starter.css
@@ -37,3 +37,8 @@ body {
     line-height: 60px; /* Vertically center the text there */
     background-color: #f5f5f5;
 }
+
+.description {
+    white-space: pre;
+    white-space: pre-line;
+}
