--- a/css/starter.css
+++ b/css/starter.css
@@ -4,11 +4,10 @@ html {
 }
 
 body {
-    margin-bottom: 60px; /* Margin bottom by footer height */
-    padding-top: 50px;
     background-image: url("../assets/creampaper_@2X.png");
     background-repeat: repeat;
 }
+
 .starter-template {
     text-align: center;
 }
@@ -29,16 +28,30 @@ body {
     color: #563D7C;
 }
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
-    background-color: #f5f5f5;
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+/*
+.container {
+    width: auto;
+    max-width: 680px;
+    padding: 0 15px;
 }
+*/
+.container .credit {
+    margin: 0 0;
+    padding: 8px 0 4px 0;
+}
+
 
 .description {
     white-space: pre;
     white-space: pre-line;
+}
+
+.navbar .dropdown-menu {
+    background-color: #5e6c77;
 }
