--- a/css/starter.css
+++ b/css/starter.css
@@ -20,6 +20,10 @@ body {
     margin-bottom: 10px; /* Added */
 }
 
+.card-body {
+    padding: 1.5rem 1.25rem .8rem;
+}
+
 .card-text {
     text-align: left;
 }
